Fix type alignment for D1 routes
